# python-click-trial

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/calc/: __main__.py  commands.py
src/calculator/: power_mod.py
tests/test_calc/: test_commands.py
tests/test_calculator/: test_power_mod.py
