[tool.poetry]
name = "calc"
version = "0.1.0"
description = ""
authors = ["sjchin88"]
readme = "README.md"
packages = [
    {include = "calc", from="src"},
    {include = "calculator", from="src"},
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pytest = "^8.3.3"
pylint = "^3.3.1"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html --cov-fail-under=10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calcx = "calc.__main__:cli"
